fix: input visibility with phone keyboard

--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ body {
     margin: 0;
     font-family: var(--main-font-family);
     color: white;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     display: grid;
@@ -44,7 +44,7 @@ header {
     background: var(--dark-background);
     padding: 1.1em;
     text-align: center;
-    width: 102vw;
+    width: 102%;
     position: absolute;
     z-index: 10;
 }
@@ -63,14 +63,14 @@ header {
     text-align: right;
     position: absolute;
     bottom: 5em;
-    width: 101vw;
+    width: 101%;
 }
 
 article {
     background: no-repeat url("/img/main_bg.png");
     background-size: cover;
     padding: 3em 0.2em 0.2em 0.2em;
-    width: 100vw;
+    width: 100;
 }
 
 @media screen and (min-width: 800px) {
@@ -142,8 +142,8 @@ button:active {
     left: 0;
     margin: 0em 0.5em;
     padding: 1em;
-    width: calc(100vw - 1em);
-    height: calc(100% - 19em);
+    width: calc(100% - 1em);
+    height: calc(100vh - 19em);
     box-shadow: 0.2em 0.2em rgba(0, 0, 0, 0.5);
     border: solid 0.1em var(--dark--accent-color);
     transition: all 0.2s ease;
@@ -207,6 +207,20 @@ button:active {
 
 .modal-hidden {
     display: none;
+}
+
+.modal-focus-full {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    z-index: 99;
+}
+
+.modal-focus-full h2 {
+    width: 100vw;
 }
 
 .loading_container  {
